add swagger config